# BorealisEngine

./: .env.local  .gitignore  .replit  package-lock.json  package.json  pyproject.toml  replit.md
apps/borealis-reports/: README.md  pyproject.toml
apps/borealis-reports/borealis_reports/: main.py  prefill.py  render.py  settings.py  store.py
apps/borealis-survey/: README.md  borealis_survey.db  pyproject.toml
apps/borealis-survey/borealis_survey/: db.py  main.py  maths.py  models.py  settings.py  verifier.py
attached_assets/: Pasted-Goal-Implement-Core-Sprint-1-for-Borealis-using-our-single-origin-Express-gateway-Surveys-v1-S-1757766551817_1757766551818.txt  Pasted-Goal-Implement-Core-Sprint-1-for-Borealis-using-our-single-origin-Express-gateway-Surveys-v1-S-1757766651010_1757766651011.txt  Pasted-You-are-scaffolding-a-brand-new-monorepo-called-Borealis-internal-codename-for-a-modular-mult-1757745171226_1757745171227.txt  Pasted-You-are-updating-the-Borealis-Directional-Drilling-Portal-to-align-with-WellRep-style-DDRs--1757770953397_1757770953398.txt  Pasted-openapi-3-0-3-info-title-Borealis-API-version-2025-09-13-servers-url-api-path-1757770967193_1757770967193.txt
client/src/: App.tsx  index.css
client/src/hooks/: use-api-health.ts
client/src/lib/: api.ts
client/src/pages/: admin-rigs.tsx  coming-soon.tsx  companies.tsx  dashboard.tsx  (+5 more)
migrations/: 0000_aberrant_preak.sql  relations.ts  schema.ts
migrations/meta/: 0000_snapshot.json  _journal.json
server/: index.ts  routes.ts  seed.ts  storage.ts
shared/: declination.ts  geo.ts  schema.ts  tfa.ts
(+14 files in other folders)
