[tool.poetry]
name = "borealis-survey"
version = "0.1.0"
description = "Borealis Survey Service - Survey calculation and verification engine"
authors = ["Borealis Team"]
readme = "README.md"
packages = [{include = "borealis_survey"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115"
uvicorn = "^0.30"
pydantic-settings = "^2.5"
sqlalchemy = "^2"
httpx = "^0.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"